2020-02-08 Marek M. Cel <marekcel@marekcel.pl>

    * UH-60 model according to NASA-CR-166309
    
    * fuselage downwash according to NASA-TM-84281
    
    * minor changes
    
    * numerical integration unit tests



2020-02-01 Marek M. Cel <marekcel@marekcel.pl>

    * unit tests reorganisation
    
    * FDM manager moved to separate module
    
    * CMake fix



2020-01-25 Marek M. Cel <marekcel@marekcel.pl>

    * blade element method

    * helicopter rotor blur

    * helicopter rotor individual blades flapping
    
    * tests (rotor, EFIS)



2020-01-18 Marek M. Cel <marekcel@marekcel.pl>

    * blade element method
    
    * FDM main modules common interface added
    
    * minor changes



2020-01-06 Marek M. Cel <marekcel@marekcel.pl>

    * rotors models
  
    * copyright notice update
    
    * minor changes



2019-12-15 Marek M. Cel <marekcel@marekcel.pl>

    * rotors models
  
    * blade element theory



2019-12-14 Marek M. Cel <marekcel@marekcel.pl>
  
    * blade element theory
    
    * temporary modified UH-60 model to evaluate blade element theory rotor model



2019-12-08 Marek M. Cel <marekcel@marekcel.pl>
  
    * pressure units

    * EADI maximum flap extension speed

    * indicated airspeed
    
    * autopilot - ARM/ALT mode switch condition
    
    * deb package scripts
    
    * autopilot - refactorization



2019-11-30 Marek M. Cel <marekcel@marekcel.pl>
  
    * layer clouds

    * references in comments

    * C-130

    * CGI landing gear and flaps
    
    * camera offset due to pilot's eyes position



2019-11-23 Marek M. Cel <marekcel@marekcel.pl>
  
    * version number correction

    * autopilot and navigation



2019-11-17 Marek M. Cel <marekcel@marekcel.pl>

    * airports and navaids symbols
    
    * DAFIF format support
    
    * units converter consexpr specifiers



2019-11-10 Marek M. Cel <marekcel@marekcel.pl>

    * airports locations
    
    * autopilot


