@@ -62,19 +62,19 @@ F16_FLCS::F16_FLCS() :
     _cat   ( CAT_I  ),
     _gains ( Cruise ),
 
-    _alpha_lef ( 0 ),
+    _alpha_lef ( FDM_NULLPTR ),
 
     _flaps_int ( 0.0 ),
     _flaps_com ( 0.0 ),
 
-    _stick_lat    ( 0 ),
-    _p_com_lag    ( 0 ),
-    _p_com_pos    ( 0 ),
-    _p_com_neg    ( 0 ),
-    _omg_p_lag    ( 0 ),
-    _omg_p_fil    ( 0 ),
-    _delta_fl_lag ( 0 ),
-    _delta_fr_lag ( 0 ),
+    _stick_lat    ( FDM_NULLPTR ),
+    _p_com_lag    ( FDM_NULLPTR ),
+    _p_com_pos    ( FDM_NULLPTR ),
+    _p_com_neg    ( FDM_NULLPTR ),
+    _omg_p_lag    ( FDM_NULLPTR ),
+    _omg_p_fil    ( FDM_NULLPTR ),
+    _delta_fl_lag ( FDM_NULLPTR ),
+    _delta_fr_lag ( FDM_NULLPTR ),
 
     _delta_flc ( 0.0 ),
     _delta_frc ( 0.0 ),
@@ -83,19 +83,19 @@ F16_FLCS::F16_FLCS() :
     _delta_ac  ( 0.0 ),
     _delta_a   ( 0.0 ),
 
-    _stick_lon  ( 0 ),
-    _alpha_lag  ( 0 ),
-    _g_com_lag  ( 0 ),
-    _omg_q_lag  ( 0 ),
-    _omg_q_fil  ( 0 ),
-    _g_z_input  ( 0 ),
-    _sca_bias_1 ( 0 ),
-    _sca_bias_2 ( 0 ),
-    _sca_bias_3 ( 0 ),
-    _u_sca_fil  ( 0 ),
-    _u_sca_fil2 ( 0 ),
-    _actuator_l ( 0 ),
-    _actuator_r ( 0 ),
+    _stick_lon  ( FDM_NULLPTR ),
+    _alpha_lag  ( FDM_NULLPTR ),
+    _g_com_lag  ( FDM_NULLPTR ),
+    _omg_q_lag  ( FDM_NULLPTR ),
+    _omg_q_fil  ( FDM_NULLPTR ),
+    _g_z_input  ( FDM_NULLPTR ),
+    _sca_bias_1 ( FDM_NULLPTR ),
+    _sca_bias_2 ( FDM_NULLPTR ),
+    _sca_bias_3 ( FDM_NULLPTR ),
+    _u_sca_fil  ( FDM_NULLPTR ),
+    _u_sca_fil2 ( FDM_NULLPTR ),
+    _actuator_l ( FDM_NULLPTR ),
+    _actuator_r ( FDM_NULLPTR ),
 
     _pitch_int ( 0.0 ),
     _delta_htl ( 0.0 ),
@@ -103,13 +103,13 @@ F16_FLCS::F16_FLCS() :
     _delta_h   ( 0.0 ),
     _delta_d   ( 0.0 ),
 
-    _pedals      ( 0 ),
-    _omg_r_lag   ( 0 ),
-    _omg_p_yaw   ( 0 ),
-    _u_sum_ll1   ( 0 ),
-    _u_sum_ll2   ( 0 ),
-    _delta_r_fil ( 0 ),
-    _delta_r_lag ( 0 ),
+    _pedals      ( FDM_NULLPTR ),
+    _omg_r_lag   ( FDM_NULLPTR ),
+    _omg_p_yaw   ( FDM_NULLPTR ),
+    _u_sum_ll1   ( FDM_NULLPTR ),
+    _u_sum_ll2   ( FDM_NULLPTR ),
+    _delta_r_fil ( FDM_NULLPTR ),
+    _delta_r_lag ( FDM_NULLPTR ),
 
     _delta_r   ( 0.0 ),
 
