@@ -29,12 +29,19 @@ using namespace fdm;
 ////////////////////////////////////////////////////////////////////////////////
 
 UH60_MainRotor::UH60_MainRotor() :
-    MainRotorAD()
-{}
+    MainRotorAD(),
+
+    _downwashLag ( FDM_NULLPTR )
+{
+    _downwashLag = new Lag();
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 
-UH60_MainRotor::~UH60_MainRotor() {}
+UH60_MainRotor::~UH60_MainRotor()
+{
+    FDM_DELPTR( _downwashLag );
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -48,6 +55,8 @@ void UH60_MainRotor::update( double omega,
     MainRotorAD::update( omega, azimuth, collective, cyclicLat, cyclicLon );
     ////////////////////////////////////////////////////////////////////////
 
+    double timeStep = 0.0; // TODO
+
     // NASA-CR-166309, p.5.1-49 (PDF p.69)
     const double k_ct  = 1.0;
     const double t_dwo = 0.01039;
@@ -55,8 +64,8 @@ void UH60_MainRotor::update( double omega,
     double omegaR = omega * _r;
 
     // s - shaft axis
-    double mu_xs = 0.0 / omegaR;
-    double mu_ys = 0.0 / omegaR;
+    double mu_xs = 0.0 / omegaR; // TODO
+    double mu_ys = 0.0 / omegaR; // TODO
 
     double lambda_0t = _vel_i / omegaR;
 
@@ -65,5 +74,6 @@ void UH60_MainRotor::update( double omega,
     double mu_tot = sqrt( mu_xs*mu_xs + mu_ys*mu_ys + lambda_0t*lambda_0t );
 
     // NASA-CR-166309, p.5.1-21 (PDF p.41)
-    double d_wo = k_ct * _ct / ( 2.0 * mu_tot );
+    _downwashLag->setTimeConstant( t_dwo / mu_tot );
+    _downwashLag->update( k_ct * _ct / ( 2.0 * mu_tot ), timeStep );
 }
