@@ -88,7 +88,7 @@ using namespace std;
  *          +  e^( a * t ) * ( -C_1 * b * sin( b*t )  + C_2 * b * cos( b*t ) )
  * x'( 0 )  =  C_1 * a  +  C_2 * b
  *
- * @see Krysicki W., Wlodarski L.: Analiza matematyczna w zadaniach. PWN, Ed. XXVII, 2018 [in Polish], p.287
+ * @see Krysicki W., Wlodarski L.: Analiza matematyczna w zadaniach, Tom II. PWN, Ed. XXVII, 2018 [in Polish], p.287
  */
 class EulerRectTest : public QObject
 {
@@ -255,7 +255,7 @@ bool EulerRectTest::solve( double m,
             integrator->integrate( T_STEP, s );
         }
     }
-    else
+    else // delta == numerical zero
     {
         // x( t )  =  ( C_1 * t + C_2 ) * e^( r_1 * t )
 
